2008-01-07  Dan Winship  <danw@gnome.org>

	* docs/reference/porting-2.2-2.4.xml: Notes on porting from 2.2 to
	2.4

2008-01-07  Dan Winship  <danw@gnome.org>

	* libsoup/*.c: Move gtk-doc stuff from docs/reference/tmpl/ to the
	C files themselves. Some updates.

	* docs/reference/Makefile.am: fix (kludge?) this up to not require
	tmpl/ to exist

	* docs/reference/client-howto.xml: 
	* docs/reference/server-howto.xml: update

2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-soap-message.c:
	* libsoup/soup-soap-response.c: For the second time, remove SOAP
	support from libsoup... These APIs are not really all that helpful
	in the grand scheme of SOAPiness, and are only used by the
	Evolution GroupWise backend, which can just import this code and
	integrate it better there.

	* libsoup/soup-misc.c (soup_xml_real_node): 
	* libsoup/soup-xmlrpc.c: Move soup_xml_real_node out of soup-misc
	to soup-xmlrpc, and make it private. libxml is no longer exposed
	in the public API.

2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-date.c (soup_date_new_from_now): new method to
	generate a date relative to now.
	(soup_date_new, etc): document SoupDate methods

	* libsoup/soup-server.c (got_headers): set Date header, as
	required by RFC 2616

2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-server.c (got_headers): if raw_paths isn't set,
	decode the request's uri->path before doing anything else
	(soup_server_class_init): add "raw-paths" property, to tell
	SoupServer to NOT decode the Request-URI path.

	* libsoup/soup-auth-domain.c (soup_auth_domain_covers): Revert
	earlier path-decoding change; that happens at the SoupServer level
	now.

2008-01-06  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-body.c (soup_buffer_get_type): Register
	SoupBuffer as a boxed type.

	* libsoup/soup-message.c (soup_message_class_init): Use
	SOUP_TYPE_BUFFER in got_chunk signal definition

	* libsoup/soup-server.c (soup_client_context_get_type): Register