@@ -2,5 +2,6 @@ NONE:BOXED
 NONE:INT
 NONE:NONE
 NONE:OBJECT
+NONE:OBJECT,OBJECT
+NONE:OBJECT,POINTER
 NONE:OBJECT,OBJECT,BOOLEAN
-NONE:POINTER,OBJECT
